# ibus-braille

./: AUTHORS  Makefile.am  README  README.md  autogen.sh  braille.xml.in.in  configure.ac  ibus-braille  ibus-braille-abbreviation-editor  ibus-braille-abbreviation-editor.desktop  ibus-braille-launcher  ibus-braille-preferences  ibus-braille-preferences.desktop  ibus-braille.desktop  ibus-sharada-braille.spec.in  ibus-shrada-braille.spec.in
IBusBraille/: Makefile.am  __init__.py  engine.py  global_var.py  localization.py  preferences.py  textview.py  user_abbreviation_manager.py
abbreviation-editor/: Makefile.am  ibus-braille-abbreviation-editor.desktop  ibus-braille-abbreviation-editor.in  ibus-sharada-braille-abbreviation-editor.desktop  ibus-sharada-braille-abbreviation-editor.in  main.py  ui.glade
braille/: Makefile.am  configure.ac  languages.txt  liblouis_language_list.txt
braille/arabic/: Makefile.am  beginning.txt  help.txt
braille/braille/: Makefile.am  middle.txt
braille/english/: 4.txt  45.txt  456.txt  46.txt  5.txt  56.txt  6.txt  Makefile.am  abbreviations.txt  beginning.txt  j.txt  jk.txt  jkl.txt  jl.txt  k.txt  kl.txt  l.txt  middle.txt
braille/french/: 5.txt  6.txt  Makefile.am  abbreviations.txt  beginning.txt  help.txt  punctuations.txt
braille/hindi/: 36.txt  Makefile.am  beginning.txt  help.txt  middle.txt  punctuations.txt  sl.txt
braille/kannada/: Makefile.am  beginning.txt  middle.txt
braille/malayalam/: 1356.txt  156.txt  3.txt  36.txt  5.txt  6.txt  Makefile.am  abbreviations.txt  abbreviations_default.txt  beginning.txt  fkl.txt  fskl.txt  help.txt  k.txt  l.txt  middle.txt  s.txt  sl.txt
braille/numerical/: Makefile.am  abbreviations_default.txt  middle.txt  punctuations.txt
braille/spanish/: Makefile.am  middle.txt
braille/tamil/: Makefile.am  beginning.txt  help.txt  middle.txt
data/: Makefile.am  preferences.glade  user_abbreviation_manager.glade
debian/: TODO  changelog  changelog.dch.save  control  copyright  rules  watch
engine/: Makefile.am  braille.xml.in.in  engine.py  factory.py  ibus-braille.in  ibus-sharada-braille.in  main.py  sharada-braille.xml.in.in
icons/: Makefile.am
language-editor/: Makefile.am  ibus-braille-language-editor.desktop  ibus-braille-language-editor.in  ibus-sharada-braille-language-editor.desktop  ibus-sharada-braille-language-editor.in  main.py  ui.glade
liblouis-back-translation-tables/: Es-Es-G0.utb  IPA-unicode-range.uti  IPA.utb  Makefile.am  Pl-Pl-g1.utb  chr-us-g1.ctb  configure.ac  countries.cti  da-dk-g26.ctb  da-dk.dis  de-de.dis  de-g1-core-patterns.dic  de-g2-core-patterns.dic  devanagari.cti  en-in-chardefs.cti  en-in-g1.ctb  en-ueb-chardefs.uti  en-ueb-g2.ctb  en-us-comp6.ctb  en-us-compbrl.uti  en-us-g1.ctb  en-us-g2.ctb  en-us-g3-abk.ctb  es-g2.ctb  fr-bfu-comp6.utb  fr-bfu-comp68.cti  fr-bfu-g2.ctb  hi-in-g1-abk.utb  hu-exceptionwords.cti  hu-hu-g2_exceptions.cti  hyph_de_DE.dic  hyph_en_US.dic  hyph_hu_HU.dic  hyph_nn_NO.dic  id-id-g1.utb  id-id-g2.utb  is.ctb  it-it-comp6.utb  it-it-comp8.utb  italian.ctb  (+19 more)
m4/: Makefile.am
packaging/: control  ibus-sharada-braille.spec  postinst  preinst  prerm
preferences/: Makefile.am  ibus-braille-preferences.desktop  ibus-braille-preferences.in  ibus-sharada-braille-preferences.desktop  ibus-sharada-braille-preferences.in  main.py  ui.glade
